<resources>
    <string name="app_name">RANKEBER</string>
    <string name="app_title">ATURAN KENDARAAN BERMOTOR</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="exit">Logout</string>
    <string name="title_logout">Logout</string>
    <string name="content_logout">Anda ingin logout ?</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="beranda">Beranda</string>
    <string name="roda2">Roda 2</string>
    <string name="roda4">Roda 4</string>
    <string name="about">Tentang</string>
    <string name="aturan_roda_4">Aturan Roda 4</string>
    <string name="aturan_roda_2">Aturan Roda 2</string>
    <string name="rankeber">rankeber</string>
    <string name="aturan_kendaraan_bermotor">Aturan Kendaraan Bermotor</string>
    <string name="aturan_kendaraan_roda_2">Aturan Kendaraan Roda 2</string>
    <string name="aturan_kendaraan_roda_4">Aturan Kendaraan Roda 4</string>
    <string name="tutup">Tutup</string>
    <string name="register">Register</string>
    <string name="nama">Nama</string>
    <string name="nomor_hp">Nomor HP</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>
    <string name="title_exit">Exit Application</string>
    <string name="content_exit">Anda ingin keluar aplikasi ?</string>
    <string name="judul">Penggunaan Helm pada roda 2</string>
    <string name="juduls">Judul</string>
    <string name="isi">Para pengendara motor diwajibkan menggunakan helm saat mengendarai sepeda motor</string>
    <string name="isis">Isi</string>
    <string name="gambar_aturan">Gambar Aturan</string>
    <string name="gambar_aturan_2_roda">Gambar Aturan 2 Roda</string>
    <string name="gambar_aturan_4_roda">Gambar Aturan 4 Roda</string>
    <string name="gambar_tentang">Gambar Tentang</string>
    <string name="gambar_nama">Gambar Nama</string>
    <string name="gambar_no_hp">Gambar No HP</string>
    <string name="gambar_email">Gambar Email</string>
    <string name="gambar_password">Gambar Password</string>
    <string name="gambar_username">Gambar Username</string>
    <string name="gambar_nopol">Gambar Nopol</string>
    <string name="nopol">Nopol</string>
    <string name="gambar_alamat">Gambar Alamat</string>
    <string name="alamat">Alamat</string>
    <string name="gambar_kategori">Gambar Kategori</string>
    <string name="ketegori">Ketegori</string>
    <string name="motor">Motor</string>
    <string name="mobil">Mobil</string>
    <string name="school">Universitas Methodist Indonesia</string>
    <string name="tentang">About</string>
    <string name="nohp">08237746336</string>
    <string name="name">Musa Andrivel T Silalahi</string>
    <string name="gmail">musa@gmail.com</string>
    <string name="nim">215518009</string>
    <string name="deskripsi">Aplikasi ini menjelaskan tentang aturan kendaraan bermotor roda 2 dan roda 4 </string>
    <string name="gambar_admin">Admin</string>
    <string name="admin">Admin</string>
    <string name="pilih_gambar">Pilih gambar</string>
    <string name="tambah">Tambah</string>
    <string name="list_aturan">List Aturan</string>
    <string name="aturan">Aturan</string>
    <string name="list_nopol">List No polisi</string>
    <string name="update">Update</string>
    <string name="hapus">Hapus</string>
    <string name="simpan">Simpan</string>
    <string name="ubah_aturan">Ubah Aturan</string>
    <string name="ubah_nopol">Ubah Nomor Polisi</string>
    <string name="tambah_aturan">Tambah Aturan</string>
    <string name="nomorpolisi">Nomor polisi</string>
</resources>
