<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rans.rankeber.component.aturan.DetailAturan">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/signupColor"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="15dp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:text="@string/aturan_kendaraan_bermotor" />

            <TextView
                android:id="@+id/judul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:layout_marginRight="6dp"
                android:layout_marginLeft="6dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:background="@drawable/framejudul"
                android:textColor="@color/black"
                android:text="@string/judul"/>

            <ImageView
                android:id="@+id/gbr"
                android:layout_width="fill_parent"
                android:layout_height="200dp"
                android:src="@drawable/helmet"
                android:contentDescription="@string/gambar_aturan" />

            <TextView
                android:id="@+id/isi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:textAlignment="center"
                android:background="@drawable/framejudul"
                android:text="@string/isi"
                android:textSize="18sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/update" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hapus" />

        </LinearLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
