<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="rans.rankeber.component.aturan.CreateAturan">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/signupColor"
        app:popupTheme="@style/AppTheme.PopupOverlay"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:text="@string/tambah_aturan" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:layout_below="@id/textView"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvJudul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/juduls"/>

            <EditText
                android:id="@+id/inputJudul"
                android:background="@drawable/rounded_edittext"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="text"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/tvIsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/isis"/>

            <EditText
                android:id="@+id/inputIsi"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:inputType="text"
                android:background="@drawable/rounded_edittext"
                tools:ignore="LabelFor" />

            <Spinner
                android:id="@+id/inputKategori"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="208dp"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    tools:ignore="ContentDescription" />

                <Button
                    android:id="@+id/btnGbr"
                    android:text="@string/pilih_gambar"
                    android:shadowColor="@android:color/transparent"
                    android:padding="15dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/shapesignup"
                    android:textColor="@color/white"

                    android:layout_width="150dp"
                    android:layout_height="50dp" />

            </LinearLayout>

            <Button
                android:id="@+id/btnTambah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shadowColor="@android:color/transparent"
                android:padding="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/shapesignup"
                android:textColor="@color/white"
                android:text="@string/tambah"/>

        </LinearLayout>

        <Button
            android:id="@+id/btnList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_aturan"
            android:shadowColor="@android:color/transparent"
            android:padding="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/shapesignup"
            android:textColor="@color/white"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
